# HomeAutoTDD

./: README.md
HomeAutomationTDD/: CMakeLists.txt
HomeAutomationTDD/Includs/: CMakeLists.txt
HomeAutomationTDD/Includs/Inc/: LightController.h
HomeAutomationTDD/Src/: CMakeLists.txt  TestRunner.c  main.c
HomeAutomationTDD/Test/: CMakeLists.txt
HomeAutomationTDD/Test/Inc/: LightControllerSpy.h  LightScheduler.h  TestFixture.h  TimeServiceFake.h
HomeAutomationTDD/Test/Src/: LightControllerSpy.c  LightScheduler.c  TimeServiceFake.c
